k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopnow
  labels:
    app.kubernetes.io/name: shopnow
    app.kubernetes.io/managed-by: kubectl
